--- a/pages/book now/guestinformation.html
+++ b/pages/book now/guestinformation.html
@@ -40,6 +40,7 @@
 </div>
 </div>
 
+<div class="background-0">
 <div class="book-now">
     <h1>Book Now</h1>
 </div>
@@ -160,7 +161,7 @@
 </div>
 </div>
 
-
+</div>
 <!-- <footer>
     <div class="footer-logo">
         <img src="../../assets/images/globalfuncitylogo.png" width="200px">
