--- a/pages/book now/selectrooms.html
+++ b/pages/book now/selectrooms.html
@@ -40,6 +40,7 @@
 </div>
 </div>
 
+<div class="background-0">
 <div class="book-now">
     <h1>Book Now</h1>
 </div>
@@ -91,7 +92,7 @@
 <div class="hurry">
     <p>In High demand! only 2 rooms left</p>
 
-    <span>$1000</span>  INR/ night. <h5>Plus taxes</h5>
+    <span>$1000</span>/ night. <h5>Plus taxes</h5>
 </div>
 </div>
 
@@ -106,7 +107,7 @@
 </div>
 
 <div class="price">
-    <span>$1000</span> &nbsp; INR/ night
+    <span>$1000</span> &nbsp; / night
    <br> &nbsp;<a href="../../pages/book now/guestinformation.html"> <button> Book Now </button></a>
 </div>
 </div>
@@ -130,7 +131,7 @@
 
 <div class="hurry">
 
-    <span>$1800</span>  INR/ night. <h5>Plus taxes</h5>
+    <span>$1800</span> / night. <h5>Plus taxes</h5>
 </div>
 </div>   
 
@@ -143,7 +144,7 @@
 </div>
 
 <div class="price">
-    <span>$1800</span> &nbsp; INR/ night
+    <span>$1800</span> &nbsp; / night
    <br> &nbsp; <a href="../../pages/book now/guestinformation.html"> <button>Book Now </button> </a>
 </div>
 </div>
@@ -169,7 +170,7 @@
 
 <div class="hurry">
 
-    <span>$800</span>  INR/ night. <h5>Plus taxes</h5>
+    <span>$800</span> / night. <h5>Plus taxes</h5>
 </div>
 </div>   
 
@@ -182,7 +183,7 @@
 </div>
 
 <div class="price">
-    <span>$800</span> &nbsp; INR/ night
+    <span>$800</span> &nbsp; / night
    <br> &nbsp; <a href="../../pages/book now/guestinformation.html"> <button>Book Now </button> </a>
 </div>
 </div>
@@ -209,7 +210,7 @@
 
 <div class="hurry">
 
-    <span>$830</span>  INR/ night. <h5>Plus taxes</h5>
+    <span>$830</span> / night. <h5>Plus taxes</h5>
 </div>
 </div>   
 
@@ -222,7 +223,7 @@
 </div>
 
 <div class="price">
-    <span>$830</span> &nbsp; INR/ night
+    <span>$830</span> &nbsp; / night
    <br> &nbsp; <a href="../../pages/book now/guestinformation.html"> <button> Book Now </button> </a>
 </div>
 </div>
@@ -236,10 +237,12 @@
 
 </div>
 
+</div>
 <footer>
     wertyujik
 </footer>
-
+</body>
+</html>
 
 
 
