--- a/pages/offer packages/newyear.html
+++ b/pages/offer packages/newyear.html
@@ -62,7 +62,7 @@
     <p>New Year Celebration with Stay and Park Tickets</p>
     <ul>
         <li>Executive or Deluxe Room</li>
-        <li>Price: INR 10,000 + Taxes per Couple</li>
+        <li>Price: $800 + Taxes per Couple</li>
     </ul>
         
     <p>Inclusions</p>
@@ -76,8 +76,8 @@
 
     <p>Extras</p>
     <ul>
-        <li>Child between the ages of 5 and 11 years - INR 4,500</li>
-        <li>Child 12 years & above and extra-person - INR 5,500</li>
+        <li>Child between the ages of 5 and 11 years - $500</li>
+        <li>Child 12 years & above and extra-person - $600</li>
     </ul>
     <p>For more details, reach out to us at +91 8608171080</p>
 </div>  
