--- a/pages/other pages/booknow.html
+++ b/pages/other pages/booknow.html
@@ -40,6 +40,8 @@
 </div>
 </div>
 
+<div class="background-0">
+
 <div class="book-now">
     <h1>Book Now</h1>
 </div>
@@ -60,15 +62,24 @@
     <h3> To  &nbsp;<input type="date" value="08 Dec 2022" placeholder="08-12-2022"></h3>
 </div>
 
-<div class="room">
-    <h3>Room</h3>
-</div>
+
 
 <div class="room-adult-children">
-    <p>Adult &nbsp;<input type="number" id="number" name="no.of.adults" placeholder="1" min="1" max="40"></p> &nbsp;
-    <p>Children &nbsp;<input type="number" id="number" name="no.of.children" placeholder="1" min="1" max="40"></p>
-    
+    <p>Adult </p> &nbsp;<button class="btn-sub"><i class="fa-solid fa-minus"></i></button> 
+        <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1"> 
+        <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
+        
+    <p>Children </p>&nbsp;<button class="btn-sub"><i class="fa-solid fa-minus"></i></button> 
+    <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1"> 
+    <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
 </div>
+
+<div class="room">
+    <h3>Did you want room? (Hotel or Resorts)</h3>
+    <input type="radio" name="yes" id="yes">Yes
+    <input type="radio" name="yes" id="no">No
+</div>
+
 
 <div class="another-room">
     <button>+Add Another Room</button>
@@ -107,6 +118,18 @@
 <div class="search">
     <h2>3. Guest Information</h2>
 </div>
+
+
+
+</div>
+</div>
+
+<!-- <div class="background-footer">
+<div class="navbar-footer">
+    <img src="../../assets/images/globalfuncitylogo.png" width="200" alt="logo"/>
+</div> -->
+
+
 
 
 
