--- a/pages/other pages/csrinitiatives.html
+++ b/pages/other pages/csrinitiatives.html
@@ -70,7 +70,7 @@
 
 
 	<p> <b> <g> From the Director’s Desk- </g> </b> <br> <br>
-	    Global Fun City, one of the biggest Amusement park in United States of America. <br>
+	    Global Fun City, one of the biggest Amusement parks in United States of America. <br>
 		<br>
 		As one of the successful growing entertainment industry in USA, I as a director of the company understand the importance of Corporate social responsibility. I believe that business should operate in such a manner that it meets or exceeds the ethical, legal, commercial, public expectations that society has towards us We aim to resolve specific issues by supporting & improving conditions of our employees, shareholders, communities, and environment. But we also believe that moral responsibility goes further, reflecting the need for corporations to address fundamental ethical issues such as inclusion, dignity, and equality. The business should not only be about money. It should be about responsibility towards human development. It should be about public good, not just private good. I would like to thank our long standing guests for all their support and love, also looking forward to welcome our new guests. Hope we can make it a memorable experience for you and your family.
 		 <br>Last but not the least I would like to say -<g> Be The Peace You Wish To See In The World! </g>
@@ -87,7 +87,7 @@
 </div>
 
 <div class="photo-of-director">
-	<img src="../../assets/images/Director.jpg" width="300" height="300"/>
+	<img src="../../assets/images/Director.jpg" width="300" height="300" alt="director-logo"/>
 </div>
 
 </div>
