--- a/pages/other pages/greeninitiatives.html
+++ b/pages/other pages/greeninitiatives.html
@@ -62,7 +62,7 @@
         <li>Conserve natural resources and energy through minimizing consumption and wastage.</li>
         <li>Minimize process waste, promote recovery, reuse and recycling of materials and develop eco-friendly waste disposal practices and continuous improvement in Environmental performance.</li>
         <li>Provide Environmental and Occupational Health and Safety training and awareness to the workforce, suppliers and sub-contractors.</li>
-        <li>This policy has been communicated to all employees of Wonderla and is made available to the public and interested parties on request.</li>
+        <li>This policy has been communicated to all employees of Global Fun City and is made available to the public and interested parties on request.</li>
     </ul>
 </div>
 
