--- a/pages/other pages/home.html
+++ b/pages/other pages/home.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+
 
 <head>
 
+<meta charset='UTF-8'>
+
 <title> About - Global Fun City </title>
+
 <link rel="stylesheet" href="../../assets/css/home.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +27,7 @@
 
 <div class="header" >
 <a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
@@ -49,8 +54,8 @@
 </div>
 <br>
 <div class="para">
-    <p>Welcome to GLOBAL FUN CITY, only one of its kind in this part of the region, Promises you non-stop fun. Just like the waves.
-         It’s a place where you can treat your family to an out of world experience. A Chance to be a part of the magic, allure, and grandeur
+    <p>Welcome to GLOBAL FUN CITY, only one of its kind in this part of the region, promises you non-stop fun. Just like the waves.
+         It’s a place where you can treat your family to an out of world experience. A chance to be a part of the magic, allure, and grandeur
 		 that defies the very spirit of fun, entertainment, and relaxation also we have World-Class water sports. <br>
         <br>
 		<br>
@@ -97,7 +102,7 @@
 
 	<footer>
 		<div class="logo">
-			<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+			<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 		</div>
 	
 	
