--- a/pages/other pages/safetyofvisitors.html
+++ b/pages/other pages/safetyofvisitors.html
@@ -84,7 +84,7 @@
 
     <div class="water-quality">
     <h2>Water Quality</h2>
-    <p>When it comes to water, Wonderla is the only park in India to use Reverse Osmosis Treatment Technology for treating water in pools. 
+    <p>When it comes to water, Global Fun City is the only park in USA to use Reverse Osmosis Treatment Technology for treating water in pools. 
     The park has a fully-fledged water quality control laboratory that carries out rigorous tests on a regular basis.</p>
     </div>
 
