--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -62,7 +62,7 @@
 		Ticket </h3>
 	<h2>$<span class="price-colour">800</span>/person</h2>
 	<p>This ticket grants access to waterpark attractions, including waterslides, pools and a Amusement park.</p>
-	<a href="../../pages/other pages/booknow.html"> <button> <b>BOOK NOW </b></button> </a>
+	<a href="../../pages/other pages/booknow.html"> <button class="btn-book-now"> <b>BOOK NOW </b></button> </a>
 </div>
 
 <div class="adult-ticket">
@@ -71,7 +71,7 @@
 	</h3>
 	<h2>$<span class="price-colour">600</span>/person(90-130cm Height)</h2>
 	<p>This ticket grants access to waterpark attractions, including waterslides, pools and a Amusement park.</p>
-	 <a href="../../pages/other pages/booknow.html"> <button><b>BOOK NOW</b></button> </a> 
+	 <a href="../../pages/other pages/booknow.html"> <button class="btn-ticket-book-now"><b>BOOK NOW</b></button> </a> 
 </div>
 </section>
 </div>
