--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -36,6 +36,14 @@
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
   	 <li> <a class="active" href="../../pages/shop/shop.html"> <b>SHOP</b></a> </li>
+	 <li><div class="dropdown-content">
+		 <ul>
+			<li><a href="#">Link 1</a></li>
+			<li><a href="#">Link 2</a></li>
+			<li><a href="#">Link 3</a></li>
+		 </ul>
+	  </div>
+	 </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
 	 
