--- a/pages/shop/whitetshirt.html
+++ b/pages/shop/whitetshirt.html
@@ -72,20 +72,23 @@
 <div class="related-pics">
 	
 	<div class="product-img">
+	<a href="../../pages/shop/black-t-shirt-with-events.html">	
 	<img src="../../assets/images/thingsidoin-shirt.jpg" width="400px" height="400px"/>
-	<h3>Black T-Shirt With Events</h3>
+	<h3>Black T-Shirt With Events</h3> </a>
 		<p>$299.00</p>
 	</div>
 
 	<div class="product-img">
+		<a href="../../pages/shop/black-collar-t-shirt-with-logo.html">
 	<img src="../../assets/images/black.jpg" width="400px" height="400px"/>
-	<h3>Black Collar T-Shirt With Logo</h3>
+	<h3>Black Collar T-Shirt With Logo</h3></a>
 		<p>$350.00</p>
 	</div>
 	
     <div class="product-img">
+		<a href="../../pages/shop/black-cap-with-logo.html">
 		<img src="../../assets/images/cap.jpg" width="400px" height="400px"/>
-		<h3>Black Cap With Logo</h3>
+		<h3>Black Cap With Logo</h3></a>
 		<p>$99.00</p>
 	</div>
 </div>
