--- a/pages/upcoming events/folklore_festivel.html
+++ b/pages/upcoming events/folklore_festivel.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-<title> Folklore Festivel - Global Fun City </title>
+<title> Folklore Festival - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/upcoming events css/folklore_festivel.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 
 <div class="header" >
 <a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
@@ -42,7 +42,7 @@
 <div class="background-color">
 
 <div class="festivel">
-    <h1>Folklore Festivel</h1>
+    <h1>Folklore Festival</h1>
 </div>
 
 <div class="timing">
@@ -76,7 +76,7 @@ In the festival folk dance groups from the five continents will reinforce, throu
 
 
 <div class="count">
-    <h1>Festivel Countdown</h1>
+    <h1>Festival Countdown</h1>
 </div>
 
 <div class="numbers">
@@ -99,7 +99,7 @@ In the festival folk dance groups from the five continents will reinforce, throu
 <div class="background-color-2">
 
     
-<video class="video-of-attractions" width="1485" height="600" autoplay loop controls>
+<video class="video-of-attractions" width="1485" height="600" autoplay="true" loop controls>
 <source src="../../assets/videos/SERBIA 🇷🇸- 2021 Fribourg International Folklore Festival🇨🇭.mp4" type="video/mp4"> 
 </video>
 
@@ -112,7 +112,7 @@ In the festival folk dance groups from the five continents will reinforce, throu
     <h3>End:</h3>
     <p>Dec 12, 2024 @ 4.30 pm</p>
     <h3>Event Category:</h3>
-    <p>Festivel</p>
+    <p>Festival</p>
 </div>
 
 <div class="organizer">
@@ -141,7 +141,7 @@ In the festival folk dance groups from the five continents will reinforce, throu
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
