--- a/pages/shop/proceedcheckout.html
+++ b/pages/shop/proceedcheckout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -15,12 +15,11 @@
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
 
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="header" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 
    	 <nav class="navbar">
 	 <ul>
@@ -31,7 +30,7 @@
   	 <li> <a class="navigation__link" href="../../pages/shop/shop.html"> <b>SHOP</b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
-     <li> <a class="active" href="../shop/cart.html"> <i class="fa-solid fa-bag-shopping"></i> <b> </b> </a> </li>
+     <li> <a class="active" href="../shop/cart.html"> co <b> </b> </a> </li>
 	 
 	 </ul>
 
@@ -46,7 +45,7 @@
 <div class="congrats-delivery">
 <div class="congrats">
     <h2>Congratulations! &#129395;</h2>
-    <p>Your Order will be deliver soon...</p>
+    <p>Your Order will be delivered soon...</p>
 </div>
 &nbsp;
 <div class="delivery">
@@ -54,12 +53,13 @@
 	<p>Vinay</p>
     <p>26/2  James road, Den city,
         New York, United States of America </p>
-    <p>Phone number: 8608171080</p>
+    <p>Phone number: +1 8608171080</p>
 	</div>
 &nbsp;
 	<div class="status">
 		<h3>Status</h3>
-		<p>Delivery expected by Jan 01</p>
+		<p>Delivery expected by Jan 01 2023</p>
+		<a href="../../pages/shop/shop.html"> <button class="btn-cancel">Back</button></a>
 		<a href="../../pages/shop/shop.html"> <button class="btn-cancel">Cancel Order</button></a>
 	</div>
 </div>
