--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
 
 <meta charset='UTF-8'>
-<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> Global Fun City </title>
-<link rel="stylesheet" href="../../assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/style.css" />
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,30 +22,30 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
+<a href="./index.html" >
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
-	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
-	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
-	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
-  	 <li> <a class="navigation__link" href="../../pages/shop/shop.html"> <b>SHOP</b></a> </li>
-	 <li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
-	 <li> <a class="navigation__link" href="../../pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
+	 <li> <a class="navigation__link" href="./pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
+	 <li> <a class="navigation__link" href="./pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
+	 <li> <a class="navigation__link" href="./pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
+	 <li> <a class="navigation__link" href="./pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
+  	 <li> <a class="navigation__link" href="./pages/shop/shop.html"> <b>SHOP</b></a> </li>
+	 <li> <a class="navigation__link" href="./pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
+	 <li> <a class="navigation__link" href="./pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
 	 
 	 </ul>
 
 	 </nav>
 	 <div>
-	 	 <button><a href="../../pages/other pages/booknow.html"> <b>BOOK NOW </b> </a></button>
+	 	 <button><a href="./pages/other pages/booknow.html"> <b>BOOK NOW </b> </a></button>
 </div>
 </div>
 </header>
 <div>
 <div class="backgroundglobal" >
-<img src="../../assets/images/bg1.jpg" alt="background-image"/>
+<img src="./assets/images/bg1.jpg" alt="background-image"/>
 </div> 
 
 
@@ -102,7 +102,7 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	<p>Give your child joy. Let's gift your baby an unforgettable experience and funny at our amusement park.	</p>
 
 	<video class="video-of-park-tour" width="1100" height="600" controls autoplay plays-inline loop>
-	 	<source src="../../assets/videos/takeaparktour.mp4" type="video/mp4"> 
+	 	<source src="./assets/videos/takeaparktour.mp4" type="video/mp4"> 
 	</video>
 </div>
 </section>
@@ -110,18 +110,18 @@ Enjoy scrumptious meals at Global Fun City.</p>
 <div class="tickets">
 	<h2>C O O L  S H O W</h2>
 	<h1>Get Your Tickets Today</h1>
-	<a href="../../pages/other pages/booknow.html"><button> Buy Tickets</button> </a>
+	<a href="./pages/other pages/booknow.html"><button> Buy Tickets</button> </a>
 </div>
 
 
 <div class="customer">
 	<h2>Our Partner</h2>
 	
-	<img src="../../assets/images/main-logo.png" class="srcatering" width="200px" alt="sr-catering-logo"/>
+	<img src="./assets/images/main-logo.png" class="srcatering" width="200px" alt="sr-catering-logo"/>
 </div>
 
 <div class="location">
-	<img src="../../assets/images/location.png" alt="location-of-global-fun-city" width="1485" height="550"/>
+	<img src="./assets/images/location.png" alt="location-of-global-fun-city" width="1485" height="550"/>
 </div>
 
 
@@ -132,7 +132,7 @@ Enjoy scrumptious meals at Global Fun City.</p>
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
+		<img src="./assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
@@ -164,13 +164,13 @@ Enjoy scrumptious meals at Global Fun City.</p>
 
     <div class="navbar-footer">
 		<ul>
-			<li> <a class="navigation__link" href="../../pages/other pages/home.html"> ABOUT US </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> </li>
-			<li> <a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> </li>
-			<li> <a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT  </a> </li>
+			<li> <a class="navigation__link" href="./pages/other pages/home.html"> ABOUT US </a> </li>
+			<li> <a class="navigation__link" href="./pages/other pages/events.html"> EVENTS  </a> </li>
+			<li> <a class="navigation__link" href="./pages/other pages/offer.html"> OFFERS  </a> </li>
+			<li> <a class="navigation__link" href="./pages/other pages/ticketprices.html"> TICKET  PRICES </a> </li>
+			<li> <a class="navigation__link" href="./pages/shop/shop.html"> SHOP </a> </li>
+			<li> <a class="navigation__link" href="./pages/other pages/attractions.html"> ATTRACTIONS </a> </li>
+			<li> <a class="navigation__link" href="./pages/other pages/contact.html"> CONTACT  </a> </li>
 		</ul>
 
 
@@ -178,11 +178,11 @@ Enjoy scrumptious meals at Global Fun City.</p>
 
 <div class="other-navbar-footer">
 	<ul>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
-        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
-		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="./pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="./pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="./pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="./pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="./pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
 	</ul>
 </div>
 
