--- a/pages/shop/proceedcheckout.html
+++ b/pages/shop/proceedcheckout.html
@@ -14,6 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 </head>
 <body>
@@ -26,11 +27,12 @@
 	<li>  <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>	
 	 <li> <a class="navigation__link" href="../../pages/homepage/index.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
+	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
   	 <li> <a class="navigation__link" href="../../pages/shop/shop.html"> <b>SHOP</b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
-     <li> <a class="active" href="../shop/cart.html"> co <b> </b> </a> </li>
+     <li> <a class="active" href="../shop/cart.html"> <i class="fa-solid fa-bag-shopping"></i> <b> </b> </a> </li>
 	 
 	 </ul>
 
