Again edit index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="header" >
 <a href="./index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
+<img src="./assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
